<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">Bluetooth Viewer</string>
    <string name="app_name_lite">Bluetooth Viewer (LITE)</string>

    <!--  BluetoothViewer -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>

    <string name="btstatus_connecting_to_fmt">connecting to: %s</string>
    <string name="btstatus_connected_to_fmt">connected to: %s</string>
    <string name="btstatus_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="title_select_device">Select a device to connect to</string>
    <string name="label_scanning">Scanning…</string>
    <string name="label_no_available_devices">No devices found</string>
    <string name="title_mock_devices">Mock Devices</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_email_recorded_data">Email recorded data</string>

    <string name="welcome_lite"><![CDATA[
        <h3>Welcome to Bluetooth Viewer Lite!</h3>
        <p>This app is a Bluetooth connection debugging tool <em>for programmers</em>.
        <em>If you\'re not a programmer, this tool is probably completely useless for you.</em><p>
        <p>Once connected to a Bluetooth device,
        this app reads and displays data line by line.
        As such, it only works with devices that broadcast data in text format line by line.
        <strong><em>It may not work with all devices.</em></strong><p>
        <p>Please <a href="https://github.com/janosgyerik/bluetoothviewer/issues">report problems</a> on GitHub.</p>
        ]]>
    </string>

    <string name="welcome_full"><![CDATA[
        <h3>Welcome to Bluetooth Viewer!</h3>
        <p>This app is a Bluetooth connection debugging tool <em>for programmers</em>.
        <em>If you\'re not a programmer, this tool is probably completely useless for you.</em><p>
        <p>Once connected to a Bluetooth device,
        this app reads and displays data line by line.
        As such, it only works with devices that broadcast data in text format line by line.
        <strong><em>It may not work with all devices.</em></strong><p>
        <p>Please <a href="https://github.com/janosgyerik/bluetoothviewer/issues">report problems</a> on GitHub.</p>
        ]]>
    </string>

    <string name="email_client_chooser">Choose an email app…</string>
    <string name="no_email_client">Could not find an email client, cannot send message :(</string>
    <string name="fmt_subject_recorded_data">Recorded data: %s</string>
    <string name="fmt_recorded_from">See attached data recorded from bluetooth device: %s</string>

    <string name="pref_record">record</string>
    <string name="title_record">Enable recording</string>
    <string name="summary_record">Record bluetooth data</string>

    <string name="pref_default_email">default_email</string>
    <string name="title_default_email">Default email address</string>
    <string name="summary_default_email">Set default email address to send recordings</string>

    <string name="pref_enable_mock_devices">enable_mock_devices</string>
    <string name="title_enable_mock_devices">Enable mock devices</string>
    <string name="summary_enable_mock_devices">Mock devices are useful for testing without a real Bluetooth device</string>

    <string name="title_settings_activity">Settings</string>
    <string name="msg_nothing_recorded">Nothing recorded, nothing to send.</string>
    <string name="msg_nothing_recorded_recording_disabled">Nothing recorded. Enable recording in the Settings menu.</string>
    <string name="msg_email_sent">Email sent.</string>
    <string name="msg_email_not_sent">Email NOT sent.</string>

    <string name="error_could_not_create_device">Could not create device.</string>

    <string name="pref_ws_enabled">ws_enabled</string>
    <string name="title_ws_enabled">Enable WebSocket bridge</string>
    <string name="summary_ws_enabled">Expose a WebSocket endpoint to mirror Bluetooth I/O</string>

    <string name="pref_ws_bind_all">ws_bind_all</string>
    <string name="title_ws_bind_all">Listen on all interfaces (0.0.0.0)</string>
    <string name="summary_ws_bind_all">Allow connections from other devices on the network</string>

    <string name="pref_ws_port">ws_port</string>
    <string name="title_ws_port">WebSocket port</string>
    <string name="summary_ws_port">Port used by the in-app WebSocket server</string>

</resources>
